# facie

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  facie.postman_collection.json  pyproject.toml
app/: README.md  crud.py  database.py  image_utils.py  logging_config.py  main.py  models.py  schemas.py
app/services/: llm.py
bot/: Dockerfile  logging_config.py  main.py
tests/: conftest.py  test_main.py
